<resources>
    <string name="app_name">JakubkaiteColorChanger</string>
    <string name="color_green">Color green</string>
    <string name="color_red">Color red</string>
    <string name="color_blue">Color blue</string>
    <string name="color_yellow">Color yellow</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
</resources>