<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/linear1">

        <TextView
            style="@style/text"
            android:text="@string/color_green">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/linear1">

        <TextView
            style="@style/text"
            android:text="@string/color_red">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/linear1">

        <TextView
            style="@style/text"
            android:text="@string/color_blue">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/linear1">

        <TextView
            style="@style/text"
            android:text="@string/color_yellow">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/buttonBox1"
            style="@style/buttonBox">

            <Button
                android:id="@+id/button1"
                android:text="@string/green"
                android:layout_gravity="start"
                style="@style/button"/>

            <Button
                android:id="@+id/button2"
                android:text="@string/red"
                android:layout_gravity="start"
                style="@style/button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonBox2"
            style="@style/buttonBox">

            <Button
                android:id="@+id/button3"
                android:text="@string/blue"
                android:layout_gravity="end"
                style="@style/button"/>

            <Button
                android:id="@+id/button4"
                android:text="@string/yellow"
                android:layout_gravity="end"
                style="@style/button"/>

        </LinearLayout>

</LinearLayout>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="10sp"/>

</LinearLayout>